BudgetView: Avoid white space at the bottom of the page when the page is shorter than the calendar #1212

--- a/app/scheduling/css/scheduling.css
+++ b/app/scheduling/css/scheduling.css
@@ -71,12 +71,13 @@ body {
 	line-height: normal;
 }
 .section-group-container {
-	height: calc(100vh - 50px);
+	height: calc(100vh - 178px);
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	position: relative;
 }
+
 .section-group-list {
 	position: relative;
 	flex: 0 0 40%;
